refactor: 필요 없는 필드 삭제